# FTPClient

./: CMakeLists.txt  README.md  bulid.sh  ca.crt  ca.key  client.crt  client.csr  client.key  ftpclient.cpp  ftpclient.h  main.cpp  server.crt  server.csr  server.key
include/: ftpclient.h  ftpwebsocket.h
src/: ftpclient.cpp  ftpwebsocket.cpp  main.cpp
